# caffe-char-rnn

./: CMakeLists.txt  README.md
include/: Classifier.h  Trainer.h
launch_files/: caffe_char_rnn.prototxt  caffe_char_rnn_solver.prototxt  test.bat  test.txt  train.bat  vocabulary_62.txt
src/: Classifier.cpp  Trainer.cpp  main.cpp
